# opentelemetry-rust

opentelemetry-otlp/: Cargo.toml  build.rs
opentelemetry-otlp/src/: span.rs
opentelemetry-otlp/src/proto/: mod.rs  opentelemetry.proto.collector.metrics.v1.rs  opentelemetry.proto.collector.trace.v1.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.metrics.v1.rs  opentelemetry.proto.resource.v1.rs  opentelemetry.proto.trace.v1.rs
opentelemetry-otlp/src/transform/: common.rs  traces.rs
