[package]
name = "opentelemetry-otlp"
version = "0.1.0"
authors = ["OpenTelemetry Authors <cncf-opentelemetry-contributors@lists.cncf.io>"]
description = "A metrics collection and distributed tracing framework"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/opentelemetry-otlp"
repository = "https://github.com/open-telemetry/opentelemetry-rust/opentelemetry-otlp"
readme = "README.md"
keywords = ["opentelemetry", "otel", "otlp", "logging", "tracing", "metrics", "async"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.7.0", default-features = false, features = ["trace"], path = ".." }
prost = "0.6"
tonic = "0.3"

[build-dependencies]
tonic-build = "0.3"
